# dio-bank-FastAPI

./: .env  README.md  dio-bank.db  pyproject.toml
migrations/: env.py
migrations/versions/: 28ad9b27925f_initial_migration.py
src/: config.py  database.py  exceptions.py  main.py
src/controllers/: account.py  transaction.py
src/models/: account.py  transaction.py
src/schemas/: account.py  transaction.py
src/services/: account.py  transaction.py
src/views/: account.py  transaction.py
